# nihterm

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  score.txt
.github/workflows/: ci.yml
benchmark/: CMakeLists.txt  bench-scroll.cc
cmake/: FindSDL2_TTF.cmake  analysis.cmake  compiler.cmake  config.cmake
include/nihterm/: cord.h  gfx.h  vt.h
src/: CMakeLists.txt  cord.c  decawm.c  gfx.c  main.c  vt.c
test/: CMakeLists.txt  cord_test.cc  vt_test.cc
